@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -78,7 +78,7 @@ public class SessionContextImpl implements SMSessionContext {
         if (CommonUtils.isEmpty(sessions)) {
             return null;
         }
-        return sessions.get(0).getSessionSpace();
+        return sessions.getFirst().getSessionSpace();
     }
 
     @Nullable
@@ -112,8 +112,20 @@ public class SessionContextImpl implements SMSessionContext {
         }
     }
 
-    public void clear() {
-        this.sessions.clear();
+    @Override
+    public void dispose() {
+        clearContext(true);
+    }
+
+    // Clears all sessions in this context
+    // Also closes them
+    public void clearContext(boolean closeSessions) {
+        if (closeSessions) {
+            for (SMSession session : sessions) {
+                session.close();
+            }
+        }
+        sessions.clear();
     }
 
 }
